// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`design-system/Alert ControlledByParent smoke-test 1`] = `
<div class="bg-info-2">
  <div class="py-3 flex gap-4 px-4 bg-info-2">
    <span class="ri-information-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mt-0.5 text-info-1">
    </span>
    <div class="flex flex-col gap-3 justify-center">
      <div class="text-base font-bold text-info-1">
        Titre
      </div>
      <div class="text-sm [&amp;_*]:text-sm font-medium text-grey-9 [&amp;_*]:text-grey-9 [&amp;>*]:last:mb-0 flex flex-col gap-3">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dignissim blandit placerat. Cras dolor enim, luctus elementum fringilla vitae, sollicitudin eu leo. Nullam eget accumsan risus. Cras pulvinar molestie euismod. Proin nec semper mauris. Nulla venenatis sed massa posuere faucibus.
      </div>
    </div>
    <div class="ml-auto cursor-pointer h-fit w-fit">
      <span class="ri-close-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-info-1">
      </span>
    </div>
  </div>
</div>
`;

exports[`design-system/Alert Default smoke-test 1`] = `
<div class="bg-info-2">
  <div class="py-3 flex gap-4 px-4 bg-info-2">
    <span class="ri-information-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mt-0.5 text-info-1">
    </span>
    <div class="flex flex-col gap-3 justify-center">
      <div class="text-base font-bold text-info-1">
        Titre
      </div>
      <div class="text-sm [&amp;_*]:text-sm font-medium text-grey-9 [&amp;_*]:text-grey-9 [&amp;>*]:last:mb-0 flex flex-col gap-3">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dignissim blandit placerat. Cras dolor enim, luctus elementum fringilla vitae, sollicitudin eu leo. Nullam eget accumsan risus. Cras pulvinar molestie euismod. Proin nec semper mauris. Nulla venenatis sed massa posuere faucibus.
      </div>
    </div>
  </div>
</div>
`;

exports[`design-system/Alert Error smoke-test 1`] = `
<div class="bg-error-2">
  <div class="py-3 flex gap-4 px-4 bg-error-2">
    <span class="ri-spam-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mt-0.5 text-error-1">
    </span>
    <div class="flex flex-col gap-3 justify-center">
      <div class="text-base font-bold text-error-1">
        Titre
      </div>
      <div class="text-sm [&amp;_*]:text-sm font-medium text-grey-9 [&amp;_*]:text-grey-9 [&amp;>*]:last:mb-0 flex flex-col gap-3">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dignissim blandit placerat. Cras dolor enim, luctus elementum fringilla vitae, sollicitudin eu leo. Nullam eget accumsan risus. Cras pulvinar molestie euismod. Proin nec semper mauris. Nulla venenatis sed massa posuere faucibus.
      </div>
    </div>
  </div>
</div>
`;

exports[`design-system/Alert Success smoke-test 1`] = `
<div class="bg-success-2">
  <div class="py-3 flex gap-4 px-4 bg-success-2">
    <span class="ri-checkbox-circle-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mt-0.5 text-success-1">
    </span>
    <div class="flex flex-col gap-3 justify-center">
      <div class="text-base font-bold text-success-1">
        Titre
      </div>
      <div class="text-sm [&amp;_*]:text-sm font-medium text-grey-9 [&amp;_*]:text-grey-9 [&amp;>*]:last:mb-0 flex flex-col gap-3">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dignissim blandit placerat. Cras dolor enim, luctus elementum fringilla vitae, sollicitudin eu leo. Nullam eget accumsan risus. Cras pulvinar molestie euismod. Proin nec semper mauris. Nulla venenatis sed massa posuere faucibus.
      </div>
    </div>
  </div>
</div>
`;

exports[`design-system/Alert Warning smoke-test 1`] = `
<div class="bg-warning-2">
  <div class="py-3 flex gap-4 px-4 bg-warning-2">
    <span class="ri-information-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mt-0.5 text-warning-1">
    </span>
    <div class="flex flex-col gap-3 justify-center">
      <div class="text-base font-bold text-warning-1">
        Titre
      </div>
      <div class="text-sm [&amp;_*]:text-sm font-medium text-grey-9 [&amp;_*]:text-grey-9 [&amp;>*]:last:mb-0 flex flex-col gap-3">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dignissim blandit placerat. Cras dolor enim, luctus elementum fringilla vitae, sollicitudin eu leo. Nullam eget accumsan risus. Cras pulvinar molestie euismod. Proin nec semper mauris. Nulla venenatis sed massa posuere faucibus.
      </div>
    </div>
  </div>
</div>
`;

exports[`design-system/Alert WithClosingButton smoke-test 1`] = `
<div class="bg-info-2">
  <div class="py-3 flex gap-4 px-4 bg-info-2">
    <span class="ri-information-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mt-0.5 text-info-1">
    </span>
    <div class="flex flex-col gap-3 justify-center">
      <div class="text-base font-bold text-info-1">
        Titre
      </div>
      <div class="text-sm [&amp;_*]:text-sm font-medium text-grey-9 [&amp;_*]:text-grey-9 [&amp;>*]:last:mb-0 flex flex-col gap-3">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dignissim blandit placerat. Cras dolor enim, luctus elementum fringilla vitae, sollicitudin eu leo. Nullam eget accumsan risus. Cras pulvinar molestie euismod. Proin nec semper mauris. Nulla venenatis sed massa posuere faucibus.
      </div>
    </div>
    <div class="ml-auto cursor-pointer h-fit w-fit">
      <span class="ri-close-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-info-1">
      </span>
    </div>
  </div>
</div>
`;

exports[`design-system/Alert WithDescriptionAsComponent smoke-test 1`] = `
<div class="bg-info-2">
  <div class="py-3 flex gap-4 px-4 bg-info-2">
    <span class="ri-information-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mt-0.5 text-info-1">
    </span>
    <div class="flex flex-col gap-3 justify-center">
      <div class="text-base font-bold text-info-1">
        Titre
      </div>
      <div class="text-sm [&amp;_*]:text-sm font-medium text-grey-9 [&amp;_*]:text-grey-9 [&amp;>*]:last:mb-0 flex flex-col gap-3">
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dignissim blandit placerat. Cras dolor enim, luctus elementum fringilla vitae, sollicitudin eu leo. Nullam eget accumsan risus. Cras pulvinar molestie euismod. Proin nec semper mauris. Nulla venenatis sed massa posuere faucibus.
        </p>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dignissim blandit placerat. Cras dolor enim, luctus elementum fringilla vitae, sollicitudin eu leo. Nullam eget accumsan risus. Cras pulvinar molestie euismod. Proin nec semper mauris. Nulla venenatis sed massa posuere faucibus.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`design-system/Alert WithFooter smoke-test 1`] = `
<div class="bg-info-2">
  <div class="py-3 flex gap-4 px-4 bg-info-2">
    <span class="ri-information-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mt-0.5 text-info-1">
    </span>
    <div class="flex flex-col gap-3 justify-center">
      <div class="text-base font-bold text-info-1">
        Titre
      </div>
      <div class="text-sm [&amp;_*]:text-sm font-medium text-grey-9 [&amp;_*]:text-grey-9 [&amp;>*]:last:mb-0 flex flex-col gap-3">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dignissim blandit placerat. Cras dolor enim, luctus elementum fringilla vitae, sollicitudin eu leo. Nullam eget accumsan risus. Cras pulvinar molestie euismod. Proin nec semper mauris. Nulla venenatis sed massa posuere faucibus.
      </div>
      <div class="flex gap-4 my-2">
        <button class="relative w-fit flex items-center border-solid group gap-1 cursor-pointer rounded-lg border font-bold text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-xs py-2 px-5">
          Valider
        </button>
        <button class="relative w-fit flex items-center border-solid group gap-1 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-xs py-2 px-5">
          Annuler
        </button>
      </div>
    </div>
  </div>
</div>
`;
